--- a/practico/descuentos.html
+++ b/practico/descuentos.html
@@ -11,8 +11,9 @@
 
         <label for="price">Precio original de tu producto</label>
         <input id="price" type="number"/>
-        <label for="discount">Descuento de tu producto</label>
-        <input id="discount" type="number"/>
+        <label for="coupon">Cupon de descuento</label>
+        <input id="coupon" type="text"/>
+
         <button id="calcular">Calcular descuento</button>
 
         <p id="result"></p>
