Calculando promedio con function y ciclo for

--- a/practico/index.html
+++ b/practico/index.html
@@ -20,7 +20,7 @@
             <a href="./descuentos.html">Porcentajes y descuentos</a>
         </li>
         <li>
-            <a href="">Estadistica basica</a>
+            <a href="./platzimath.html">Estadistica basica</a>
         </li>
         <li>
             <a href="">Analisis Salarial</a>
