realizando cambios peque;os en los archivos para que esten ordenados

--- a/practico/index.html
+++ b/practico/index.html
@@ -9,7 +9,7 @@
        <h1>Taller de Matematicas con JavaScript</h1>
        <p>
         Aprende a trabajar con matematicas usando codigo JavaScript en
-        <a href="https://platzi.com/jsmath"></a> 
+        <a href="https://platzi.com/jsmath">platzi.com/jsmath</a> 
        </p>
 
        <ul>
@@ -23,7 +23,7 @@
             <a href="./platzimath.html">Estadistica basica</a>
         </li>
         <li>
-            <a href="">Analisis Salarial</a>
+            <a href="./salarios.html">Analisis Salarial</a>
         </li>
        </ul>
 
